#4504 Add column value filters